fix: text behind road

--- a/style.css
+++ b/style.css
@@ -61,5 +61,5 @@ section img
 }
 #road   
 {
-    z-index: 2;
+    z-index: 3;
 }
